welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	
	
	def positionFinale:Boolean = {
			if (estFaceMur && getDirection()==Direction.WEST) {return true}
			else {false}
		}
	def peindre() {
		baisseBrosse()
		leveBrosse()
	}
		
	peindre()
	while (!estFaceMur) {
		avance()
		peindre()
	}
	
	if (verifierPosition==false) {
		if (getDirection==Direction.EAST) {
			gauche()
			avance()
			gauche()
		}
		else {
			droite()
			avance()
			gauche()
		}
	}
	else {}
	

		}
	




